feat: add route to unfollow comedian
